--- a/src/pages/[id].astro
+++ b/src/pages/[id].astro
@@ -37,7 +37,7 @@ const { content } = Astro.props;
 
     // without component
     // <>
-    //   <heading>{item.heading}</heading>
+    //   <h1>{item.heading}</h1>
     //   <p>{item.p}</p>
     // </>
     <AstroContent heading={item.heading} p={item.p} />
